#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

=======

Tag: V00-03-54
2016-04-16 Mikhail S. Dubrovin
- modify geometry-def-epix100a.data to get default det.image() orientation like in raw data.
	
Tag: V00-03-53
2016-04-13 Christopher O'Grady
- Change two MEC BLD detectors to return Ipimb types, not DDL

Tag: V00-03-52
2016-03-28 TJ Lane and Christopher O'Grady
- Added unit tests for Detector module

Tag: V00-03-51
2016-03-28 Christopher O'Grady
- Restore Mikhail's sphinx documentation

Tag: V00-03-50
2016-03-26 TJ Lane
- PyDetector - fix DetInfo from raising when passed Epics name w/colon
- EpicsDetector - added simple __main__

Tag: V00-03-49
2016-03-25 Mikhail S. Dubrovin
- PyDetectorAccess - add methods ndarray_from_image and default_geometry, update ex_all_dets.py
- AreaDetector - add method ndarray_from_image and its test ex_ndarray_from_image
- add examples/ex_ndarray_from_image.py data/geometry-def-epix100a.data
	
Tag: V00-03-48
2016-03-24 Mikhail S. Dubrovin
- AreaDetector - update comments for doc string.

Tag: V00-03-47
2016-03-22 Christopher O'Grady
- fix bug in exception

Tag: V00-03-46
2016-03-21 Christopher O'Grady and TJ Lane
- update doc strings

Tag: V00-03-45
2016-03-17 Mikhail S. Dubrovin
- det_ndarr_raw_proc - fix output file name substitution
- add parameter "addmetad" to save_txt, save_txtnda, save_txtdaq methods. Do not save metadata for CSPAD and CSPAD2x2.
- det_ndarr_average - change default parameters for plotim=False, verbose=False, events=10000000

Tag: V00-03-44
2016-03-15 Mikhail S. Dubrovin
- AreaDetector._shaped_array_ - exclude a bunch of detectors from re-shaping based on calib parameters (PSAS-139)
