@@ -13,10 +13,15 @@ reverse time order.
 
 =======
 
+Tag: V00-03-55
+2016-04-20 TJ Lane and Christopher O'Grady
+- add Generic1DDetector and subclassed GenericWFDetector to provide
+  user-interface to new Generic1D datatype.
+
 Tag: V00-03-54
 2016-04-16 Mikhail S. Dubrovin
 - modify geometry-def-epix100a.data to get default det.image() orientation like in raw data.
-	
+
 Tag: V00-03-53
 2016-04-13 Christopher O'Grady
 - Change two MEC BLD detectors to return Ipimb types, not DDL
